Actions
Bug #13760
closedluxadm: variable may be used uninitialized
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors:
fchba.c: In function 'fchba_display_link_status': fchba.c:1102: error: 'physical' may be used uninitialized in this function [-Wuninitialized] fchba.c:1102: error: 'comp_phys' may be used uninitialized in this function [-Wuninitialized] fchba.c: In function 'fchba_dump_map': fchba.c:892: error: 'physical' may be used uninitialized in this function [-Wuninitialized] fchba.c:892: error: 'comp_phys' may be used uninitialized in this function [-Wuninitialized] adm.c: In function 'main': adm.c:634:19: error: 'option_t_input' may be used uninitialized in this function [-Werror=maybe-uninitialized] 634 | exit_code = fchba_display_config(&argv[path_index], | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 635 | option_t_input, argc - path_index); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors fchba.c: In function 'fchba_hotplug_e': fchba.c:2078:5: error: 'exit_code' may be used uninitialized in this function [-Werror=maybe-uninitialized] if (exit_code != 0) { ^ cc1: all warnings being treated as errors *** Error code 1 dmake: Fatal error: Command failed for target `fchba.o' Current working directory /code/illumos-gate/usr/src/cmd/luxadm
Clean them all...
Testing done: build/install/boot.
Updated by Electric Monk about 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 826703e5ab8201460531b75273c9fa3814413cd9
commit 826703e5ab8201460531b75273c9fa3814413cd9 Author: Toomas Soome <tsoome@me.com> Date: 2021-05-10T16:25:08.000Z 13760 luxadm: variable may be used uninitialized Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions